    Major changes in "nagios-plugins-linux-memory" version 1

* First release.

======================================================================